# paimon

./: .gitignore  README.md  pyproject.toml
config/: test.yaml
scripts/: start.ps1
src/paimon/: config.py  data.py  main.py  network.py  panel.py  qt.py  schema.py
