[project]
name = "paimon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DBinK", email = "DBinKv1@Gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "ping3>=5.1.5",
    "pyside6>=6.10.2",
    "rich>=14.3.3",
    "tcping>=0.1.1rc1",
]

[project.scripts]
paimon = "paimon:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
